--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.3.0",
     "mongodb": "^2.1.19",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "valid-url": "^1.0.9"
   }
 }
